# meti_profil

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
crates/meti_profil_core/: Cargo.toml
crates/meti_profil_core/src/: error.rs  lib.rs
crates/meti_profil_core/src/analysis/: categorical.rs  correlation.rs  duplicate.rs  missing.rs  mod.rs  numeric.rs  schema.rs
crates/meti_profil_core/src/dataframe/: column.rs  dataframe.rs  mod.rs
crates/meti_profil_core/src/io/: csv.rs  excel.rs  mod.rs  parquet.rs
crates/meti_profil_core/src/report/: html.rs  markdown.rs  mod.rs  model.rs
crates/meti_profil_core/src/report/assets/: report.css  report.js
crates/meti_profil_core/tests/rust/: analysis_categorical.rs  analysis_correlation.rs  analysis_duplicate.rs  analysis_missing.rs  analysis_numeric.rs  analysis_schema.rs  dataframe.rs  io_csv.rs  io_excel.rs  io_parquet.rs  report_html.rs  report_markdown.rs  smoke.rs
crates/meti_profil_py/: Cargo.toml
crates/meti_profil_py/src/: lib.rs
docs/: design.md
docs/superpowers/specs/: 2026-06-21-meti_profil-design.md
python/meti_profil/: __init__.py
tests/fixtures/: small.csv  small.parquet  small.xlsx
tests/python/: test_html_output.py  test_markdown_output.py  test_profile_report.py
