[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "meti_profil"
version = "0.1.0"
description = "Modern, fast data profiling in Rust with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["data-profiling", "data-quality", "eda", "arrow", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Metimer/meti_profil"
Repository = "https://github.com/Metimer/meti_profil"
Issues = "https://github.com/Metimer/meti_profil/issues"

[project.optional-dependencies]
dev = ["pytest", "pandas", "polars", "pyarrow", "maturin"]

[tool.maturin]
manifest-path = "crates/meti_profil_py/Cargo.toml"
python-source = "python"
module-name = "meti_profil._meti_profil"
