[package]
name = "meti_profil_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
arrow = { version = "53.0", default-features = false, features = ["ipc", "csv"] }
arrow-cast = "53.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# IO
csv = "1.3"
parquet = { version = "53.0", default-features = false, features = ["arrow"] }
calamine = { version = "0.26", features = ["dates"] }

# Stats
statrs = { version = "0.17", optional = true }

[[test]]
name = "smoke"
path = "tests/rust/smoke.rs"

[[test]]
name = "dataframe"
path = "tests/rust/dataframe.rs"

[[test]]
name = "io_csv"
path = "tests/rust/io_csv.rs"

[features]
default = ["statrs"]
