[package]
name = "meti_profil_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
arrow = { version = "53.0", default-features = false, features = ["ipc", "csv"] }
arrow-cast = "53.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# IO
csv = "1.3"
parquet = { version = "53.0", default-features = false, features = ["arrow", "snap"] }
calamine = { version = "0.26", features = ["dates"] }

# Stats
statrs = { version = "0.17", optional = true }

[[test]]
name = "smoke"
path = "tests/rust/smoke.rs"

[[test]]
name = "dataframe"
path = "tests/rust/dataframe.rs"

[[test]]
name = "io_csv"
path = "tests/rust/io_csv.rs"

[[test]]
name = "io_parquet"
path = "tests/rust/io_parquet.rs"

[[test]]
name = "io_excel"
path = "tests/rust/io_excel.rs"

[[test]]
name = "analysis_schema"
path = "tests/rust/analysis_schema.rs"

[[test]]
name = "analysis_numeric"
path = "tests/rust/analysis_numeric.rs"

[[test]]
name = "analysis_categorical"
path = "tests/rust/analysis_categorical.rs"

[[test]]
name = "analysis_missing"
path = "tests/rust/analysis_missing.rs"

[[test]]
name = "analysis_duplicate"
path = "tests/rust/analysis_duplicate.rs"

[[test]]
name = "analysis_correlation"
path = "tests/rust/analysis_correlation.rs"

[[test]]
name = "report_markdown"
path = "tests/rust/report_markdown.rs"

[features]
default = ["statrs"]
