[package]
name = "meti_profil_py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "meti_profil_py"
crate-type = ["cdylib"]

[dependencies]
meti_profil_core = { path = "../meti_profil_core" }
# abi3-py310: build a single stable-ABI wheel compatible with CPython >= 3.10.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
